@startuml
!pragma layout smetana

' Klasse BaseDeconvolutionAlgorithm
abstract class BaseDeconvolutionAlgorithm {
    {abstract} +deconvolve(Hyperstack& data, PSF& psf): Hyperstack
    {abstract} +configure(const DeconvolutionConfig& config)
}

' Klasse RLDeconvolutionAlgorithm, die von BaseDeconvolutionAlgorithm erbt
class RLDeconvolutionAlgorithm {
    +deconvolve(Hyperstack& data, PSF& psf): Hyperstack
    +configure(const DeconvolutionConfig& config)
    -iterations: int
    -epsilon: double
    -grid: bool
    -borderType: int
    -psfSafetyBorder: int
    -cubeSize: int
}

' Template-Klasse DeconvolutionAlgorithm
class DeconvolutionAlgorithm<Algorithm, Args...> {
    +DeconvolutionAlgorithm(const DeconvolutionConfig& config, Args&&... args)
    +deconvolve(Hyperstack& data, PSF& psf): Hyperstack
    -algo: std::unique_ptr<BaseDeconvolutionAlgorithm>
}

' Vererbung RLDeconvolutionAlgorithm -> BaseDeconvolutionAlgorithm
RLDeconvolutionAlgorithm --|> BaseDeconvolutionAlgorithm

@enduml
